<resources>
    <string name="app_name">E-Commerce</string>
    <string name="cart">cart</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_user">Enter User</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_contact">Enter Contact</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="get_pass">Get Password</string>
    <string name="login_now">Login Now</string>
    <string name="nav_open">Nav Open</string>
    <string name="nav_close">Nav Close</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="list_os">List OS</string>
    <string name="orders">Orders</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="username">Username</string>
    <string name="ejemplo_mail_com">ejemplo@mail.com</string>

</resources>